# VanGogh

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
assets/config/: engine.json
configuration/: root_directory.h.in
docs/diagrams/: OGLAdapter.puml
inc/LearnOpenGL/: trivial.hpp
inc/OglAdapter/: BasicData.h  Camera.h  FrameBuffer.h  GlfwMgr.h  Mesh.h  Model.h  ModelMgr.h  Shader.h  ShaderMgr.h  TextureMgr.h
inc/Shape/: BaseShape.h
inc/Util/: DeferGuard.h  FileSystem.h  GlobalConfig.h
inc/glad/: glad.h
notes/: cameras.md  render_pipline.md
shader/LearnOpenGL/3_ModelLoading/: model.vs
shader/LearnOpenGL/5_AdvancedLighting/3_Shadow/: 1_shadow_map.fs  1_shadow_map.vs
src/: CMakeLists.txt
src/Engine/: CMakeLists.txt  app.cpp
src/LearnOpenGL/3_ModelLoading/: main.cpp
src/LearnOpenGL/4_AdvancedOpenGL/: 1_DepthBuffer.cpp
src/LearnOpenGL/5_AdvancedLighting/: 3_1_ShadowMap.cpp
src/OglAdapter/: CMakeLists.txt  Camera.cpp  FrameBuffer.cpp  GlfwMgr.cpp  Mesh.cpp  Model.cpp  ModelMgr.cpp  Shader.cpp  ShaderMgr.cpp  TextureMgr.cpp  glad.c
src/Shape/: CMakeLists.txt
src/Util/: CMakeLists.txt  FileSystem.cpp  GlobalConfig.cpp
